--- a/SlayerWxEngine/SlayerWxEngine/SlayerWxEngine.vcxproj.filters
+++ b/SlayerWxEngine/SlayerWxEngine/SlayerWxEngine.vcxproj.filters
@@ -1,17 +1,45 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Archivos de origen">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    <Filter Include="Src">
+      <UniqueIdentifier>{eaf1af7b-bce2-48b2-901d-f1414bbf9e1d}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Archivos de encabezado">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
+    <Filter Include="Src\baseGame">
+      <UniqueIdentifier>{6ed1a43d-fa2a-4ee1-b7cf-b46eb28efa02}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Archivos de recursos">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
+    <Filter Include="Src\export">
+      <UniqueIdentifier>{a802ce1a-6e10-4640-addf-14977e406cb5}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Src\renderer">
+      <UniqueIdentifier>{660ec833-a0d3-4b1c-bc6e-965b97754c43}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Src\window">
+      <UniqueIdentifier>{9609b3bb-c3d6-4c64-b24d-f7bb3a623e65}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Src\baseGame\BaseGame.cpp">
+      <Filter>Src\baseGame</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\window\window.cpp">
+      <Filter>Src\window</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\renderer\renderer.cpp">
+      <Filter>Src\renderer</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Src\baseGame\BaseGame.h">
+      <Filter>Src\baseGame</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\export\export.h">
+      <Filter>Src\export</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\window\window.h">
+      <Filter>Src\window</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\renderer\renderer.h">
+      <Filter>Src\renderer</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
