--- a/SlayerWxEngine/SlayerWxEngine/SlayerWxEngine.vcxproj
+++ b/SlayerWxEngine/SlayerWxEngine/SlayerWxEngine.vcxproj
@@ -35,6 +35,7 @@
     <ProjectGuid>{ab5742c2-708d-436d-9c21-c9b1b5303a04}</ProjectGuid>
     <RootNamespace>SlayerWxEngine</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>SlayerWxEngine</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
