--- a/SlayerWxEngine/SlayerWxEngine.vcxproj
+++ b/SlayerWxEngine/SlayerWxEngine.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="Src\baseGame\BaseGame.cpp" />
     <ClCompile Include="Src\entity2D\Entity2D.cpp" />
     <ClCompile Include="Src\entity\Entity.cpp" />
+    <ClCompile Include="Src\input\Input.cpp" />
     <ClCompile Include="Src\renderer\renderer.cpp" />
     <ClCompile Include="Src\shape\Shape.cpp" />
     <ClCompile Include="Src\window\window.cpp" />
@@ -31,6 +32,8 @@
     <ClInclude Include="Src\entity2D\Entity2D.h" />
     <ClInclude Include="Src\entity\Entity.h" />
     <ClInclude Include="Src\export\export.h" />
+    <ClInclude Include="Src\input\Input.h" />
+    <ClInclude Include="Src\input\keycode\Keycode.h" />
     <ClInclude Include="Src\renderer\renderer.h" />
     <ClInclude Include="Src\shape\Shape.h" />
     <ClInclude Include="Src\window\window.h" />
