--- a/SlayerWxEngine/SlayerWxEngine.vcxproj
+++ b/SlayerWxEngine/SlayerWxEngine.vcxproj
@@ -22,6 +22,8 @@
     <ClCompile Include="Src\baseGame\BaseGame.cpp" />
     <ClCompile Include="Src\entity2D\Entity2D.cpp" />
     <ClCompile Include="Src\entity\Entity.cpp" />
+    <ClCompile Include="Src\GlobalUtility\globalUtility.cpp" />
+    <ClCompile Include="Src\globalUtility\Utility\Utility.cpp" />
     <ClCompile Include="Src\input\Input.cpp" />
     <ClCompile Include="Src\renderer\renderer.cpp" />
     <ClCompile Include="Src\shape\Shape.cpp" />
@@ -32,6 +34,8 @@
     <ClInclude Include="Src\entity2D\Entity2D.h" />
     <ClInclude Include="Src\entity\Entity.h" />
     <ClInclude Include="Src\export\export.h" />
+    <ClInclude Include="Src\GlobalUtility\globalUtility.h" />
+    <ClInclude Include="Src\globalUtility\Utility\Utility.h" />
     <ClInclude Include="Src\input\Input.h" />
     <ClInclude Include="Src\input\keycode\Keycode.h" />
     <ClInclude Include="Src\renderer\renderer.h" />
