--- a/SlayerWxEngine/SlayerWxEngine.vcxproj.filters
+++ b/SlayerWxEngine/SlayerWxEngine.vcxproj.filters
@@ -49,6 +49,15 @@
     <Filter Include="Src\sprite">
       <UniqueIdentifier>{963c7e10-d600-4866-91d2-1e63db13ac75}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Src\AnimatorController">
+      <UniqueIdentifier>{c2d06e8f-2c10-49be-8ce1-9360f590ded5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Src\AnimatorController\Frame">
+      <UniqueIdentifier>{168d6f83-7ef6-452b-b712-67592893db51}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Src\AnimatorController\Animation">
+      <UniqueIdentifier>{94c3d382-5eef-42a3-9ec8-cbd48cf4ee38}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\baseGame\BaseGame.cpp">
@@ -83,6 +92,13 @@
     </ClCompile>
     <ClCompile Include="Src\sprite\Sprite.cpp">
       <Filter>Src\sprite</Filter>
+    </ClCompile>
+    <ClCompile Include="AnimatorController.cpp" />
+    <ClCompile Include="Src\animatorController\Animation\Animation.cpp">
+      <Filter>Src\AnimatorController\Animation</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\animatorController\Frame\Frame.cpp">
+      <Filter>Src\AnimatorController\Frame</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -127,6 +143,13 @@
     </ClInclude>
     <ClInclude Include="Src\sprite\Sprite.h">
       <Filter>Src\sprite</Filter>
+    </ClInclude>
+    <ClInclude Include="AnimatorController.h" />
+    <ClInclude Include="Src\animatorController\Animation\Animation.h">
+      <Filter>Src\AnimatorController\Animation</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\animatorController\Frame\Frame.h">
+      <Filter>Src\AnimatorController\Frame</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
