camera moved to Camera class

--- a/SlayerWxEngine/SlayerWxEngine.vcxproj
+++ b/SlayerWxEngine/SlayerWxEngine.vcxproj
@@ -22,6 +22,7 @@
     <ClCompile Include="Src\animatorController\Animation\Animation.cpp" />
     <ClCompile Include="Src\animatorController\Frame\Frame.cpp" />
     <ClCompile Include="Src\baseGame\BaseGame.cpp" />
+    <ClCompile Include="Src\camera\Camera.cpp" />
     <ClCompile Include="Src\entity2D\Entity2D.cpp" />
     <ClCompile Include="Src\entity\Entity.cpp" />
     <ClCompile Include="Src\GlobalUtility\globalUtility.cpp" />
@@ -38,6 +39,7 @@
     <ClInclude Include="Src\animatorController\Animation\Animation.h" />
     <ClInclude Include="Src\animatorController\Frame\Frame.h" />
     <ClInclude Include="Src\baseGame\BaseGame.h" />
+    <ClInclude Include="Src\camera\Camera.h" />
     <ClInclude Include="Src\entity2D\Entity2D.h" />
     <ClInclude Include="Src\entity\Entity.h" />
     <ClInclude Include="Src\export\export.h" />
