--- a/SlayerWxEngine/SlayerWxEngine.vcxproj.filters
+++ b/SlayerWxEngine/SlayerWxEngine.vcxproj.filters
@@ -61,6 +61,9 @@
     <Filter Include="Src\animatorController\Animation">
       <UniqueIdentifier>{94c3d382-5eef-42a3-9ec8-cbd48cf4ee38}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Src\camera">
+      <UniqueIdentifier>{41c64dbd-bc11-4944-bd6b-a2f2be4a80c2}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Src\baseGame\BaseGame.cpp">
@@ -104,6 +107,9 @@
     </ClCompile>
     <ClCompile Include="Src\shader\Shader.cpp">
       <Filter>Src\shader</Filter>
+    </ClCompile>
+    <ClCompile Include="Src\camera\Camera.cpp">
+      <Filter>Src\camera</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -157,6 +163,9 @@
     </ClInclude>
     <ClInclude Include="Src\shader\Shader.h">
       <Filter>Src\shader</Filter>
+    </ClInclude>
+    <ClInclude Include="Src\camera\Camera.h">
+      <Filter>Src\camera</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
