--- a/SlayerWxEngine/SlayerWxEngine.vcxproj
+++ b/SlayerWxEngine/SlayerWxEngine.vcxproj
@@ -28,6 +28,7 @@
     <ClCompile Include="Src\GlobalUtility\globalUtility.cpp" />
     <ClCompile Include="Src\globalUtility\Utility\Utility.cpp" />
     <ClCompile Include="Src\input\Input.cpp" />
+    <ClCompile Include="Src\light\Light.cpp" />
     <ClCompile Include="Src\renderer\renderer.cpp" />
     <ClCompile Include="Src\shader\Shader.cpp" />
     <ClCompile Include="Src\shape\Shape.cpp" />
@@ -47,6 +48,7 @@
     <ClInclude Include="Src\globalUtility\Utility\Utility.h" />
     <ClInclude Include="Src\input\Input.h" />
     <ClInclude Include="Src\input\keycode\Keycode.h" />
+    <ClInclude Include="Src\light\Light.h" />
     <ClInclude Include="Src\renderer\renderer.h" />
     <ClInclude Include="Src\shader\Shader.h" />
     <ClInclude Include="Src\shape\Shape.h" />
