--- a/SlayerWxEngine/SlayerWxEngine.vcxproj
+++ b/SlayerWxEngine/SlayerWxEngine.vcxproj
@@ -23,13 +23,13 @@
     <ClCompile Include="Src\animatorController\Frame\Frame.cpp" />
     <ClCompile Include="Src\baseGame\BaseGame.cpp" />
     <ClCompile Include="Src\camera\Camera.cpp" />
+    <ClCompile Include="Src\cube\Cube.cpp" />
     <ClCompile Include="Src\entity2D\Entity2D.cpp" />
     <ClCompile Include="Src\entity\Entity.cpp" />
     <ClCompile Include="Src\GlobalUtility\globalUtility.cpp" />
     <ClCompile Include="Src\globalUtility\Utility\Utility.cpp" />
     <ClCompile Include="Src\input\Input.cpp" />
     <ClCompile Include="Src\light\Light.cpp" />
-    <ClCompile Include="Src\material2D\Material2D.cpp" />
     <ClCompile Include="Src\renderer\renderer.cpp" />
     <ClCompile Include="Src\shader\Shader.cpp" />
     <ClCompile Include="Src\shape\Shape.cpp" />
@@ -42,6 +42,7 @@
     <ClInclude Include="Src\animatorController\Frame\Frame.h" />
     <ClInclude Include="Src\baseGame\BaseGame.h" />
     <ClInclude Include="Src\camera\Camera.h" />
+    <ClInclude Include="Src\cube\Cube.h" />
     <ClInclude Include="Src\entity2D\Entity2D.h" />
     <ClInclude Include="Src\entity\Entity.h" />
     <ClInclude Include="Src\export\export.h" />
@@ -50,7 +51,6 @@
     <ClInclude Include="Src\input\Input.h" />
     <ClInclude Include="Src\input\keycode\Keycode.h" />
     <ClInclude Include="Src\light\Light.h" />
-    <ClInclude Include="Src\material2D\Material2D.h" />
     <ClInclude Include="Src\renderer\renderer.h" />
     <ClInclude Include="Src\shader\Shader.h" />
     <ClInclude Include="Src\shape\Shape.h" />
