--- a/SlayerWxEngine/SlayerWxEngine.vcxproj
+++ b/SlayerWxEngine/SlayerWxEngine.vcxproj
@@ -24,10 +24,16 @@
     <ClCompile Include="Src\baseGame\BaseGame.cpp" />
     <ClCompile Include="Src\camera\Camera.cpp" />
     <ClCompile Include="Src\cube\Cube.cpp" />
+    <ClCompile Include="Src\dataManager\DataManager.cpp" />
     <ClCompile Include="Src\entity2D\Entity2D.cpp" />
     <ClCompile Include="Src\entity\Entity.cpp" />
     <ClCompile Include="Src\GlobalUtility\globalUtility.cpp" />
     <ClCompile Include="Src\globalUtility\Utility\Utility.cpp" />
+    <ClCompile Include="Src\gui\imgui.cpp" />
+    <ClCompile Include="Src\gui\imgui_demo.cpp" />
+    <ClCompile Include="Src\gui\imgui_draw.cpp" />
+    <ClCompile Include="Src\gui\imgui_impl_glfw_gl3.cpp" />
+    <ClCompile Include="Src\gui\MyGui.cpp" />
     <ClCompile Include="Src\input\Input.cpp" />
     <ClCompile Include="Src\light\Light.cpp" />
     <ClCompile Include="Src\renderer\renderer.cpp" />
@@ -43,11 +49,20 @@
     <ClInclude Include="Src\baseGame\BaseGame.h" />
     <ClInclude Include="Src\camera\Camera.h" />
     <ClInclude Include="Src\cube\Cube.h" />
+    <ClInclude Include="Src\dataManager\DataManager.h" />
     <ClInclude Include="Src\entity2D\Entity2D.h" />
     <ClInclude Include="Src\entity\Entity.h" />
     <ClInclude Include="Src\export\export.h" />
     <ClInclude Include="Src\GlobalUtility\globalUtility.h" />
     <ClInclude Include="Src\globalUtility\Utility\Utility.h" />
+    <ClInclude Include="Src\gui\imconfig.h" />
+    <ClInclude Include="Src\gui\imgui.h" />
+    <ClInclude Include="Src\gui\imgui_impl_glfw_gl3.h" />
+    <ClInclude Include="Src\gui\imgui_internal.h" />
+    <ClInclude Include="Src\gui\MyGui.h" />
+    <ClInclude Include="Src\gui\stb_rect_pack.h" />
+    <ClInclude Include="Src\gui\stb_textedit.h" />
+    <ClInclude Include="Src\gui\stb_truetype.h" />
     <ClInclude Include="Src\input\Input.h" />
     <ClInclude Include="Src\input\keycode\Keycode.h" />
     <ClInclude Include="Src\light\Light.h" />
